# Maryland-Housing

./: .env.example  .gitignore  AGENTS.md  AI_AGENT_WORKFLOW.md  LICENSE  Makefile  QUICKSTART.md  README.md  activate_correct_venv.sh  docker-compose.agent-lightning.yml  mary.json  pyproject.toml  railway.json  requirements.txt  requirements_layer2_v2.txt  setup_database.sh
.claude/: README.md  config.json
.claude/history/: .gitkeep
.claude/prompts/: Fixer.md  api-design.md  cleanup.md  code-review.md  data-pipeline.md  data_finder.md  documentation.md
.claude/templates/: prompt_template.md
.github/workflows/: ci.yml  integration-smoke.yml  weekly-codebase-elon.yml
api/: README.md  main.py  start.sh
config/: data_sources_registry.json  database.py  databricks.py  msde_enrollment_manifest.json  nces_membership_manifest.json  settings.py
data/: README.md
data/schemas/: databricks_schema.sql  schema.sql  schema_timeseries.sql
databricks/: deploy.sh  workflow.json
devtools/: __init__.py
devtools/agent_lightning/: __init__.py  run_evals.py
docker/agent_lightning/: Dockerfile
docs/: AGENT_LIGHTNING.md  ANALYSIS_METHODS.md  API_IMPLEMENTATION.md  ARCHITECTURE.md  BUGFIXES.md  BUGS_FIXED_SUMMARY.md  COMPLETE_SYSTEM_STATUS.md  DATA_ARCHITECTURE_ASSESSMENT.md  DATA_SOURCES.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_CHANGELOG.md  LIMITATIONS.md  METHODOLOGY.md  MULTIYEAR_IMPLEMENTATION.md  PROJECT_CLEANUP_PLAN.md  PROJECT_STATUS.md  README.md  SCORING_METHODOLOGY.md  SYNTHESIS_GROUPING_IMPLEMENTATION.md  ai-chat-plan.md
docs/api/: API_REFERENCE.md
docs/architecture/: ANALYSIS_METHODS.md  DATA_SOURCES.md  ETL_DECISIONS_2026-02-05.md  SYNTHESIS_GROUPING.md
docs/archive/: CLEANUP_REFACTORING_GUIDE.md  COMPLETE_SYSTEM_STATUS.md  FINAL_IMPLEMENTATION_SUMMARY.md  MULTIYEAR_IMPLEMENTATION.md  PROJECT_CLEANUP_PLAN_2026-01-30.md  PROJECT_STATUS_SUMMARY.md  README.md
docs/audits/: 2026-02-docs-structure-cleanup-pass2.md  2026-02-elon-algorithm-pass1.md  2026-02-elon-algorithm-pass2.md  2026-02-elon-algorithm-pass3.md  2026-02-elon-algorithm-pass4.md  2026-02-elon-algorithm-pass5.md  2026-02-engineering-audit.md  2026-02-file-structure-cleanup.md  layer1_accessibility_sensitivity_2026-02-15.md
docs/development/: CONTRIBUTING.md  DATABRICKS_PIPELINE_SETUP.md  DEPLOYMENT_GUIDE.md
docs/layers/: LAYER1_ECONOMIC.md  LAYER2_MOBILITY.md
exports/: md_counties_20260129.geojson  md_counties_20260130.geojson  md_counties_20260131.geojson  md_counties_20260201.geojson  md_counties_20260207.geojson
frontend/: README.md  index.html  map.js  md_counties_latest.geojson  serve.py
frontend/modules/: capabilities.js
migrations/: 006_layer2_accessibility_overhaul.sql  007_layer1_economic_accessibility_overhaul.sql  008_layer1_economic_opportunity_index.sql  009_layer4_housing_affordability_overhaul.sql  010_layer3_education_accessibility_overhaul.sql  011_layer3_school_directory_id_length.sql  011_layer5_demographic_equity_overhaul.sql  012_layer6_risk_vulnerability_overhaul.sql  013_layer1_qwi_layer4_hud_additions.sql  014_layer5_low_vacancy_prediction.sql  015_layer1_prediction.sql  016_layer2_prediction.sql  017_layer3_prediction.sql  018_layer4_prediction.sql  019_layer6_prediction.sql  020_layer5_prediction.sql  021_layer6_pollution_precision.sql  022_layer1_accessibility_network_enhancements.sql  023_layer1_od_commute_flow_columns.sql  024_layer2_acs_flow_enrichment.sql
reports/monthly-audit/: monthly-audit-2026-02-17.md
scripts/: check_docs_consistency.sh  check_migration_prefixes.py  check_year_literals.py  claude_list.sh  claude_run.sh  cleanup.sh  init_databricks.py  init_db.py  integration_smoke_check.py  layer1_accessibility_sensitivity.py  load_lodes_od_to_databricks.py  monthly_static_audit.sh  performance_regression_check.py  reorganize_databricks_medallion.py  run_sql_migrations.py  setup_api_demo.sh  setup_env.sh
skills/maryland-housing-ingest/: SKILL.md
src/: run_multiyear_pipeline.py  run_pipeline.py
src/ai/: README.md
src/api/: chat_routes.py  main.py  routes.py
src/export/: geojson_export.py
src/ingest/: layer1_economic_accessibility.py  layer1_employment.py  (+12 more)
tasks/: lessons.md  todo.md
tests/: conftest.py  test_api_endpoints.py  test_classification.py  test_databricks_schema_sql.py  test_databricks_sql_translation.py  test_databricks_table_routing.py  test_export_geojson_export.py  test_ingest_pipelines.py  test_processing_feature_registry.py  test_processing_multiyear_classification.py  test_processing_multiyear_scoring.py  test_processing_normalization.py  test_processing_scoring.py  test_processing_timeseries_features.py  test_run_pipelines.py  test_utils_data_sources_extra.py  test_utils_logging.py
(+70 files in other folders)
