[project]
name = "maryland-housing-atlas"
version = "1.0.0"
description = "Spatial analysis of structural trajectories across Maryland counties"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["gis", "maryland", "housing", "viability", "atlas"]

# Entry points for Databricks wheel tasks
[project.scripts]
ingest_layer1 = "src.ingest.layer1_economic_accessibility:main"
ingest_layer2 = "src.ingest.layer2_accessibility:main"
ingest_layer3 = "src.ingest.layer3_schools:main"
ingest_layer4 = "src.ingest.layer4_housing:main"
ingest_layer5 = "src.ingest.layer5_demographics:main"
ingest_layer6 = "src.ingest.layer6_risk:main"
ingest_policy = "src.ingest.policy_persistence:main"
process_pipeline = "src.run_multiyear_pipeline:main"
export_geojson = "src.export.geojson_export:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "config*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | migrations
    | data
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "migrations", "data"]
known_first_party = ["src", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short -ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "migrations/",
    "data/",
    ".venv/",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "src/ai/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
