[project]
name = "maryland-housing-atlas"
version = "1.0.0"
description = "Spatial analysis of structural trajectories across Maryland counties"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["gis", "maryland", "housing", "viability", "atlas"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | migrations
    | data
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "migrations", "data"]
known_first_party = ["src", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short -ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
# Gradual typing mode: keep useful checks but allow legacy Optional defaults
# and untyped third-party imports while type coverage is expanded incrementally.
warn_return_any = false
implicit_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
exclude = [
    "migrations/",
    "data/",
    ".venv/",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "src/ai/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
